--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,13 @@ textarea {
   resize: vertical;
 }
 
+textarea,
+select,
+input,
+button {
+  outline: none;
+}
+
 /* ==========================================================================
    Browser Upgrade Prompt
    ========================================================================== */
@@ -267,6 +274,7 @@ section {
   text-align: center;
   border: solid 3px #222;
   padding: 100px 200px;
+  min-height: 400px;
 }
 
 .contact h3 {
@@ -277,6 +285,48 @@ section {
   margin-top: 5px;
   font-size: 1em;
   margin-bottom: 50px;
+}
+
+.inline-contact {
+  display: none;
+}
+
+.inline-contact h4 {
+  opacity: 0;
+}
+
+.inline-contact input {
+  border: none;
+  border-bottom: solid 3px #999;
+  padding: 0 5px;
+  transition: border-bottom ease-in-out 0.15s;
+}
+
+.inline-contact input:focus {
+  border-bottom: solid 3px #222;
+}
+
+.inline-contact button {
+  display: block;
+  text-align: center;
+  margin: 15px auto;
+  width: 50%;
+  opacity: 0;
+}
+
+#contactMessage {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  border: solid 3px #222;
+  font-size: 1.3em;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
 
 footer,
@@ -308,8 +358,6 @@ footer .social-links a {
   text-decoration: none;
   color: rgb(17, 17, 17);
 }
-
-
 
 /* ==========================================================================
    Text Styles
@@ -380,6 +428,14 @@ p {
 
 .image-responsive {
   max-width: 100%
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .heart {
