--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,18 @@ section {
   margin-bottom: 50px;
 }
 
+.response-icon {
+  opacity: 0;
+  background: green;
+  color: #feffff;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border-radius: 50%;
+  justify-content: center;
+  font-size: 40px;
+}
+
 .inline-contact {
   display: none;
 }
@@ -327,6 +339,21 @@ section {
   width: 100%;
   height: 100%;
   padding: 20px;
+}
+
+.message-tools {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 50px;
+  right: 25px;
+  height: 50px;
+}
+
+.send-btn {
+  opacity: 0;
+  display: none;
 }
 
 footer,
@@ -523,6 +550,20 @@ button,
 .btn-fancy {
   font-family: 'Libre Baskerville', serif;
   font-weight: 700
+}
+
+.btn-round {
+  display: block;
+  font-size: 1.5em;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  padding: 0;
+}
+
+.input-error {
+  border-bottom-color: rgb(226, 59, 59) !important;
+  color: rgb(226, 59, 59) !important;
 }
 
 /* ==========================================================================
