--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,11 @@ video {
   vertical-align: middle;
 }
 
+svg {
+  width: 60%;
+  margin: 0 auto;
+}
+
 /*
  * Remove default fieldset styles.
  */
@@ -141,9 +146,18 @@ section {
   height: 100%;
 }
 
+.h-90 {
+  height: 90%;
+}
+
 .v-center {
   display: flex;
   align-items: center;
+}
+
+.flex-bottom {
+  display: flex;
+  align-items: flex-end;
 }
 
 .col-md-12 {
@@ -196,6 +210,20 @@ section {
 
 .hero {
   height: 100vh;
+  position: relative;
+}
+
+.project-hero {
+  color: #feffff;
+  background: #333;
+}
+
+.hero-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0.5;
 }
 
 .hero .site-title {
@@ -206,6 +234,19 @@ section {
   margin-top: 5px;
   font-size: 1.5em;
   font-weight: 400;
+}
+
+.hero .project-title {
+  font-size: 3em;
+  line-height: 1.2
+}
+
+.hero .project-intro {
+  font-size: 1em;
+}
+
+.hero-content {
+  z-index: 2;
 }
 
 .hero .fun-fact {
@@ -387,6 +428,44 @@ footer .social-links a {
 }
 
 /* ==========================================================================
+   Project Details Page
+   ========================================================================== */
+
+.project-details {
+  margin: 100px 0;
+}
+
+.project-details video{
+  max-width: 80%;
+  margin: 0 auto
+}
+
+.project-details h2{
+  margin-bottom: 0;
+}
+
+.project-details .sub-header {
+  margin-bottom: 50px;
+  margin-top: 0;
+}
+
+.carousel-cell {
+  margin-right: 20px;
+  overflow: hidden;
+}
+
+.carousel-cell img {
+  display: block;
+  height: 200px;
+}
+
+@media screen and ( min-width: 768px ) {
+  .carousel-cell img {
+    height: 400px;
+  }
+}
+
+/* ==========================================================================
    Text Styles
    ========================================================================== */
 
@@ -463,6 +542,11 @@ p {
 
 .text-left {
   text-align: left;
+}
+
+.text-muted {
+  color: #999;
+  font-family: monospace;
 }
 
 .heart {
