--- a/css/main.css
+++ b/css/main.css
@@ -472,8 +472,12 @@ footer .social-links a {
   width: 100%;
 }
 
-.bio h1,
-h3 {
+.bio h1 {
+  color: #feffff;
+  margin: 0;
+}
+
+.bio h3 {
   color: #feffff;
   margin: 0;
 }
@@ -574,7 +578,8 @@ h3,
 h4,
 h5 {
   font-family: 'Libre Baskerville', serif;
-  font-weight: 700
+  font-weight: 700;
+  color: #000
 }
 
 h1 {
