feat: added a bunch of stuff

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,11 @@
 @import 'tailwindcss/components';
 
 @import 'tailwindcss/utilities';
+
+.fancy-link:hover {
+  background-color: #275efe;
+  cursor: pointer;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
